# lattice

./: .gitattributes  Cargo.toml  LICENSE
crates/lattice-actor/: Cargo.toml
crates/lattice-actor/src/: context.rs  directory.rs  error.rs  handle.rs  host.rs  lib.rs  mailbox.rs  observation.rs  protocol.rs  recipient.rs  registry.rs  remote_watch.rs  reply.rs  runtime.rs  state_machine.rs  tests.rs  traits.rs  watch.rs
crates/lattice-actor/tests/: continuation.rs  deferred_replies.rs  derive.rs  execution_policies.rs  lazy_activation.rs  lifecycle.rs  message_hooks.rs  panic_termination.rs  passivation_chaos.rs  protocol_compile.rs  public_api.rs  registry.rs  runtime_observer.rs  sender_forwarding.rs  state_machine.rs  timers.rs
crates/lattice-codegen/: Cargo.toml
crates/lattice-codegen/src/: builder.rs  descriptor.rs  error.rs  gateway.rs  lib.rs  render.rs  route_key.rs  spec.rs  tests.rs
crates/lattice-config/: Cargo.toml
crates/lattice-config-etcd/: Cargo.toml
crates/lattice-config-etcd/src/: client.rs  codec.rs  config.rs  lib.rs  store.rs  tests.rs
crates/lattice-config/src/: bootstrap.rs  error.rs  format.rs  lib.rs  source.rs  store.rs  tests.rs
crates/lattice-core/: Cargo.toml
crates/lattice-core/src/: actor_ref.rs  coordinator.rs  direct_link.rs  failpoint.rs  id.rs  instance.rs  kind.rs  lib.rs  service_context.rs  tests.rs  trace.rs  uri_serde.rs
crates/lattice-core/tests/: workspace_graph.rs
crates/lattice-direct-link/: Cargo.toml
crates/lattice-direct-link/benches/: direct_link_benchmark.rs
crates/lattice-direct-link/src/: backpressure.rs  codec.rs  delivery.rs  endpoint_pool.rs  inbound.rs  lib.rs  outbound.rs  protocol.rs  session.rs  stream.rs  transport.rs
crates/lattice-discovery/: Cargo.toml
crates/lattice-discovery-k8s/: Cargo.toml
crates/lattice-discovery-k8s/src/: endpoint_slice.rs  lib.rs  tests.rs
crates/lattice-discovery/src/: aggregate.rs  config_store.rs  dns.rs  lib.rs  provider.rs  static_provider.rs  tests.rs
crates/lattice-eventbus/: Cargo.toml
crates/lattice-eventbus/src/: error.rs  lib.rs  local.rs  nats.rs  publisher.rs  tests.rs  types.rs
crates/lattice-eventbus/tests/: chaos.rs
crates/lattice-gateway/: Cargo.toml
crates/lattice-gateway/src/: binding.rs  error.rs  frame.rs  lib.rs  rate_limit.rs  route.rs  server.rs  session.rs  tests.rs
crates/lattice-id/: Cargo.toml
crates/lattice-id-etcd/: Cargo.toml
crates/lattice-id-etcd/src/: config.rs  lib.rs  store.rs
crates/lattice-id-etcd/tests/: etcd_acceptance.rs
crates/lattice-id/src/: lib.rs  service.rs  snowflake.rs  worker.rs
crates/lattice-ops/: Cargo.toml
crates/lattice-ops/src/: admin.rs  config_store.rs  error.rs  lib.rs  operation.rs  ops_config.rs  outbox.rs  scheduler.rs  shutdown.rs  telemetry.rs  tests.rs
crates/lattice-placement/: Cargo.toml  build.rs
crates/lattice-placement/src/: allocation.rs  authority.rs  cache.rs  control.rs  coordination.rs  coordinator.rs  endpoint.rs  error.rs  etcd.rs  handoff.rs  instance.rs  lib.rs  mapping.rs  membership_session.rs  ownership.rs  plan.rs  region.rs  registry.rs  route.rs  routing.rs  runtime.rs  session.rs  sharding.rs  singleton.rs  static_resolver.rs  storage.rs  store.rs  tests.rs  types.rs  vshard.rs
crates/lattice-placement/tests/: authority_api.rs  authority_mtls.rs  chaos.rs  etcd_acceptance.rs  fenced_retry.rs
crates/lattice-remoting/: Cargo.toml
crates/lattice-remoting/src/: association.rs  bootstrap.rs  config.rs  control.rs  endpoint.rs  handshake.rs  lane.rs  lib.rs  messaging.rs  protocol.rs  transport.rs  watch.rs  wire.rs
crates/lattice-remoting/tests/: bootstrap_probe.rs
crates/lattice-rpc/: Cargo.toml
crates/lattice-rpc/src/: adapter.rs  client.rs  dedup.rs  error.rs  lib.rs  metadata.rs  security.rs  server.rs  tests.rs  traits.rs  types.rs
crates/lattice-rpc/tests/: compile.rs  fake_transport.rs
crates/lattice-service/: Cargo.toml
crates/lattice-service/src/: actor.rs  assembly.rs  backend.rs  builder.rs  clients.rs  cluster.rs  component.rs  components.rs  config.rs  context.rs  control.rs  deployment.rs  direct_link.rs  direct_links.rs  error.rs  exact_tell_routes.rs  framework.rs  lib.rs  lifecycle.rs  registration.rs  rpc.rs  runtime.rs  service.rs  supervisor.rs  test_support.rs  tests.rs
crates/lattice-service/tests/: public_placement_api.rs  reference_messaging.rs
crates/lattice-sim/: Cargo.toml
crates/lattice-sim/src/: adapters.rs  clock.rs  domains.rs  explorer.rs  fault.rs  lib.rs  lifecycle.rs  network.rs  process.rs  retained_stop.rs  scenario.rs  serde_u128.rs  store.rs  trace.rs
crates/lattice-sim/tests/: failpoint_boundaries.rs  legacy_absence.rs
crates/lattice-store-mongodb/: Cargo.toml  README.md
crates/lattice-store-mongodb-macros/: Cargo.toml
crates/lattice-store-mongodb-macros/src/: common.rs  document.rs  document_set.rs  lib.rs  scan.rs
crates/lattice-store-mongodb/benches/: persistence.rs  scan.rs
crates/lattice-store-mongodb/src/: actor.rs  bson_serde.rs  coordinator.rs  direct.rs  document.rs  document_set.rs  error.rs  lazy.rs  lib.rs  mongo.rs  mongo_store.rs  prepared.rs  scan.rs  table.rs
crates/lattice-store-mongodb/tests/: actor_integration.rs  compile_fail.rs  derive.rs
crates/lattice-telemetry-otlp/: Cargo.toml
crates/lattice-telemetry-otlp/src/: config.rs  error.rs  guard.rs  lib.rs  resource.rs  telemetry.rs  tests.rs
examples/distributed-login/: Cargo.toml  README.md  build.rs
examples/distributed-login/proto/: game.proto
examples/distributed-login/src/: actors.rs  error.rs  gateway_runtime.rs  lib.rs  placement.rs  services.rs  tcp.rs
examples/distributed-login/tests/: distributed_flow.rs  generated_binding_placement.rs
examples/minimal-world/: Cargo.toml  build.rs
examples/minimal-world/config/: world-service.toml
examples/minimal-world/proto/: world.proto
examples/minimal-world/src/: main.rs
examples/rpc-benchmark/: Cargo.toml  README.md  build.rs
examples/rpc-benchmark/benches/: rpc_benchmark.rs
examples/rpc-benchmark/proto/: bench.proto
(+317 files in other folders)
