[workspace]
members = [
    "crates/lattice-actor",
    "crates/lattice-config",
    "crates/lattice-config-etcd",
    "crates/lattice-core",
    "crates/lattice-codegen",
    "crates/lattice-gateway",
    "crates/lattice-eventbus",
    "crates/lattice-placement",
    "crates/lattice-telemetry-otlp",
    "crates/lattice-ops",
    "crates/lattice-rpc",
    "examples/minimal-world",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/realm-labs/lattice"

[workspace.dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
etcd-client = "0.19.0"
http = "1.4.2"
lattice-config = { path = "crates/lattice-config" }
lattice-config-etcd = { path = "crates/lattice-config-etcd" }
lattice-core = { path = "crates/lattice-core" }
lattice-actor = { path = "crates/lattice-actor" }
lattice-codegen = { path = "crates/lattice-codegen" }
lattice-eventbus = { path = "crates/lattice-eventbus" }
lattice-gateway = { path = "crates/lattice-gateway" }
lattice-ops = { path = "crates/lattice-ops" }
lattice-placement = { path = "crates/lattice-placement" }
lattice-telemetry-otlp = { path = "crates/lattice-telemetry-otlp" }
lattice-rpc = { path = "crates/lattice-rpc" }
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.32.1", features = ["trace", "rt-tokio"] }
prost = "0.14.4"
prost-reflect = "0.16.4"
prost-types = "0.14.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tempfile = "3.23.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }
toml = "0.9.7"
tonic = "0.14.6"
tonic-prost = "0.14.6"
tonic-prost-build = "0.14.6"
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json", "registry"] }
trybuild = "1.0.116"
