[workspace]
members = [
    "crates/lattice-actor",
    "crates/lattice-config",
    "crates/lattice-config-etcd",
    "crates/lattice-core",
    "crates/lattice-codegen",
    "crates/lattice-direct-link",
    "crates/lattice-gateway",
    "crates/lattice-eventbus",
    "crates/lattice-placement",
    "crates/lattice-telemetry-otlp",
    "crates/lattice-ops",
    "crates/lattice-rpc",
    "crates/lattice-service",
    "examples/distributed-login",
    "examples/minimal-world",
    "examples/rpc-benchmark",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/realm-labs/lattice"

[workspace.dependencies]
async-trait = "0.1.89"
async-nats = "0.49.1"
axum = "0.8.9"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive"] }
criterion = { version = "0.5.1", features = ["async_tokio"] }
dashmap = "6.1.0"
etcd-client = { version = "0.19.0", features = ["tls-roots"] }
futures-util = "0.3.31"
http = "1.4.2"
lattice-config = { path = "crates/lattice-config" }
lattice-config-etcd = { path = "crates/lattice-config-etcd" }
lattice-core = { path = "crates/lattice-core" }
lattice-actor = { path = "crates/lattice-actor" }
lattice-codegen = { path = "crates/lattice-codegen" }
lattice-direct-link = { path = "crates/lattice-direct-link" }
lattice-eventbus = { path = "crates/lattice-eventbus" }
lattice-gateway = { path = "crates/lattice-gateway" }
lattice-ops = { path = "crates/lattice-ops" }
lattice-placement = { path = "crates/lattice-placement" }
lattice-telemetry-otlp = { path = "crates/lattice-telemetry-otlp" }
lattice-rpc = { path = "crates/lattice-rpc" }
lattice-service = { path = "crates/lattice-service" }
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.32.1", features = ["trace", "rt-tokio"] }
prost = "0.14.4"
prost-reflect = "0.16.4"
prost-types = "0.14.4"
rcgen = "0.14.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tempfile = "3.23.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
toml = "1.1.2"
tonic = { version = "0.14.6", features = ["tls-ring"] }
tonic-prost = "0.14.6"
tonic-prost-build = "0.14.6"
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json", "registry"] }
trybuild = "1.0.116"
uuid = { version = "1.18.1", features = ["v4"] }
x509-parser = "0.18.1"
