[workspace]
members = [
    "crates/lattice-actor",
    "crates/lattice-actor-macros",
    "crates/lattice-config",
    "crates/lattice-config-etcd",
    "crates/lattice-core",
    "crates/lattice-discovery",
    "crates/lattice-discovery-k8s",
    "crates/lattice-codegen",
    "crates/lattice-remoting",
    "crates/lattice-gateway",
    "crates/lattice-id",
    "crates/lattice-id-etcd",
    "crates/lattice-eventbus",
    "crates/lattice-placement",
    "crates/lattice-telemetry-otlp",
    "crates/lattice-ops",
    "crates/lattice-service",
    "crates/lattice-sim",
    "crates/lattice-store-mongodb",
    "crates/lattice-store-mongodb-macros",
    "examples/distributed-login",
    "examples/minimal-world",
    "examples/rpc-benchmark",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/realm-labs/lattice"

[workspace.dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
async-nats = "0.49.1"
axum = "0.8.9"
base64 = "0.22.1"
blake3 = "1.8.2"
bytes = "1.12.0"
clap = { version = "4.5.53", features = ["derive"] }
criterion = { version = "0.8.2", features = ["async_tokio"] }
concurrent-queue = "2.5.0"
event-listener = "5.4.1"
dashmap = "6.1.0"
etcd-client = { version = "0.19.0", features = ["tls-roots"] }
futures-util = "0.3.31"
hickory-resolver = "0.26.1"
http = "1.4.2"
lattice-config = { path = "crates/lattice-config" }
lattice-config-etcd = { path = "crates/lattice-config-etcd" }
lattice-core = { path = "crates/lattice-core" }
lattice-discovery = { path = "crates/lattice-discovery" }
lattice-discovery-k8s = { path = "crates/lattice-discovery-k8s" }
lattice-actor = { path = "crates/lattice-actor", version = "0.1.0" }
lattice-actor-macros = { path = "crates/lattice-actor-macros" }
lattice-codegen = { path = "crates/lattice-codegen" }
lattice-remoting = { path = "crates/lattice-remoting" }
lattice-eventbus = { path = "crates/lattice-eventbus" }
lattice-gateway = { path = "crates/lattice-gateway" }
lattice-id = { path = "crates/lattice-id", version = "0.1.0" }
lattice-id-etcd = { path = "crates/lattice-id-etcd", version = "0.1.0" }
lattice-ops = { path = "crates/lattice-ops" }
lattice-placement = { path = "crates/lattice-placement" }
lattice-telemetry-otlp = { path = "crates/lattice-telemetry-otlp" }
lattice-service = { path = "crates/lattice-service" }
lattice-sim = { path = "crates/lattice-sim" }
lattice-store-mongodb = { path = "crates/lattice-store-mongodb", version = "0.1.0" }
lattice-store-mongodb-macros = { path = "crates/lattice-store-mongodb-macros", version = "0.1.0" }
mongodb = "=3.7.0"
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.32.1", features = ["trace", "rt-tokio"] }
proc-macro-crate = "3.5.0"
proc-macro2 = "1.0.106"
prost = "0.14.4"
prost-build = "0.14.4"
prost-reflect = "0.16.4"
prost-types = "0.14.4"
quote = "1.0.46"
k8s-openapi = { version = "0.28.0", features = ["v1_35"] }
kube = { version = "4.0.0", default-features = false, features = ["client", "runtime", "ring", "rustls-tls"] }
rcgen = "0.14.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tempfile = "3.23.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "test-util", "time"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-rustls = "0.26.4"
toml = "1.1.2"
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json", "registry"] }
trybuild = "1.0.116"
syn = "2.0.118"
uuid = { version = "1.18.1", features = ["v4"] }
x509-parser = "0.18.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
