[package]
name = "lattice-actor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
http.workspace = true
lattice-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
