[package]
name = "lattice-actor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
concurrent-queue.workspace = true
dashmap.workspace = true
futures-util.workspace = true
http.workspace = true
lattice-core.workspace = true
lattice-actor-macros.workspace = true
lattice-remoting.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
trybuild.workspace = true
