[package]
name = "lattice-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost.workspace = true
prost-reflect.workspace = true
prost-types.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
prost-build.workspace = true

[dev-dependencies]
tempfile.workspace = true
