[package]
name = "lattice-config-etcd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
etcd-client.workspace = true
lattice-config.workspace = true
lattice-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
