[package]
name = "lattice-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
http.workspace = true
lattice-config.workspace = true
prost.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
