[package]
name = "lattice-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
futures-util.workspace = true
hickory-resolver.workspace = true
lattice-config.workspace = true
lattice-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

