[package]
name = "lattice-eventbus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
lattice-core.workspace = true
lattice-rpc.workspace = true
prost.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
lattice-config.workspace = true
