[package]
name = "lattice-eventbus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
async-nats.workspace = true
futures-util.workspace = true
lattice-core.workspace = true
lattice-rpc.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
lattice-config.workspace = true
