[package]
name = "lattice-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
lattice-core.workspace = true
lattice-rpc.workspace = true
prost.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
