[package]
name = "lattice-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
dashmap.workspace = true
http.workspace = true
lattice-core.workspace = true
lattice-rpc.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true

[dev-dependencies]
