[package]
name = "lattice-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
lattice-core.workspace = true
lattice-actor.workspace = true
lattice-remoting.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
