[package]
name = "lattice-placement"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
etcd-client.workspace = true
http.workspace = true
lattice-core.workspace = true
lattice-rpc.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tokio-stream.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
base64.workspace = true
lattice-config.workspace = true
rcgen.workspace = true
tempfile.workspace = true
trybuild.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
