[package]
name = "lattice-remoting"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
lattice-core.workspace = true
prost.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
uuid.workspace = true
x509-parser.workspace = true

[dev-dependencies]
rcgen.workspace = true
