[package]
name = "lattice-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
http.workspace = true
lattice-actor.workspace = true
lattice-core.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
trybuild.workspace = true
