[package]
name = "lattice-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
lattice-actor.workspace = true
lattice-core.workspace = true
lattice-remoting.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
trybuild.workspace = true
