[package]
name = "lattice-store-mongodb-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macros for lattice-store-mongodb"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
