[package]
name = "lattice-telemetry-otlp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lattice-core.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
