[package]
name = "distributed-login"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
http.workspace = true
lattice-actor.workspace = true
lattice-core.workspace = true
lattice-gateway.workspace = true
lattice-placement.workspace = true
lattice-rpc.workspace = true
lattice-service.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

[build-dependencies]
lattice-codegen.workspace = true
