[package]
name = "minimal-world"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
lattice-actor.workspace = true
lattice-config.workspace = true
lattice-core.workspace = true
lattice-eventbus.workspace = true
lattice-gateway.workspace = true
lattice-ops.workspace = true
lattice-placement.workspace = true
lattice-remoting.workspace = true
lattice-service.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
lattice-codegen.workspace = true
