[package]
name = "remoting-benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
lattice-actor.workspace = true
lattice-core.workspace = true
lattice-gateway.workspace = true
lattice-placement.workspace = true
lattice-remoting.workspace = true
lattice-service.workspace = true
prost.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion.workspace = true

[build-dependencies]
lattice-codegen.workspace = true

[[bench]]
name = "remoting_benchmark"
path = "benches/rpc_benchmark.rs"
harness = false
